[package]
edition = "2021"
name = "napi-demo"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13", features = ["async"] }
napi-derive = "2.16.12"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
panic = "abort"
codegen-units = 1
opt-level = "s"
